--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ pyasn1==0.5.0
 pyasn1-modules==0.3.0
 Pygments==2.16.1
 pyparsing==3.1.1
+python-dotenv==1.0.0
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
