--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ executing==2.0.1
 google-auth==2.23.4
 google-auth-oauthlib==1.1.0
 gspread==5.12.0
+gspread-formatting==1.1.2
 httplib2==0.22.0
 idna==3.4
 ipdb==0.13.13
