--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-SHEET_TESTE=none
-SHEET_NU_EXTRATO=none
+SHEET_NU_EXTRATO_CREDITO=16kKbWMA9EXsHKA46j5vlDs9W1HSIkOSjeATHIO2kcRo
+SHEET_NU_EXTRATO_CONTA=1BLIimMuVCghyYDhsysZ253gsXP6FR9hFc44MDdBRwh0
