feat: added  enviroment variable GOOGLE_APPLICATION_CREDENTIALS

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-SHEET_NU_EXTRATO=1BLIimMuVCghyYDhsysZ253gsXP6FR9hFc44MDdBRwh0
+SHEET_NU_EXTRATO=id_sheet
+GOOGLE_APPLICATION_CREDENTIALS=./credentials.json
