--- a/requirements.txt
+++ b/requirements.txt
@@ -14,19 +14,24 @@ ipdb==0.13.13
 ipython==8.20.0
 jedi==0.19.1
 matplotlib-inline==0.1.6
+numpy==1.26.3
 oauthlib==3.2.2
+pandas==2.2.0
 parso==0.8.3
 prompt-toolkit==3.0.43
 pure-eval==0.2.2
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 Pygments==2.17.2
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2024.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
 six==1.16.0
 stack-data==0.6.3
 traitlets==5.14.1
+tzdata==2023.4
 urllib3==2.1.0
 wcwidth==0.2.13
