feat: added new enviroment variable SAVE_CSV_PATH

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 SHEET_NU_EXTRATO=id_sheet
 GOOGLE_APPLICATION_CREDENTIALS=./credentials.json
 URL=http://localhost:8000/api/transactions/
+SAVE_CSV_PATH=/name-example/sub-dir-example/
